--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,34 @@
+h1, h4, h6, p, span, img {
+    opacity: 0;
+    animation: aparecer ease 1.5s;
+    animation-delay: 0s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+button, h3, a, section {
+    opacity: 0;
+    animation: aparecer ease 1.2s;
+    animation-delay: 0s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+h2, h5, li, table, select, svg {
+    opacity: 0;
+    animation: aparecer ease 1s;
+    animation-delay: 0s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+ 
+@keyframes aparecer {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+     }
+}
+
 .texto-primario{
     color: white;
 }
@@ -17,21 +48,3 @@
     background: green;
 }
 
-/* .texto-primario{
-    color: rgb(224, 172, 0);
-}
-.texto-secundario{
-    color:rgb(255, 252, 96);
-}
-.texto-resaltado{
-    color: rgb(255, 255, 255);
-}
-.fondo-primario{
-    background:rgb(0, 0, 0);
-}
-.fondo-secundario{
-    background:rgb(70, 70, 70);
-}
-.fondo-resaltado{
-    background: rgb(187, 187, 187);
-} */
