--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="container">
     <app-admin-panel></app-admin-panel>
+    <app-product></app-product>
     <div *ngIf="getSessionStorage()!=null && getSessionStorage()!=''">
         <app-product></app-product>
     </div>
