--- a/src/app/componentes/modal-login/modal-login.component.html
+++ b/src/app/componentes/modal-login/modal-login.component.html
@@ -5,7 +5,7 @@
   <div mat-dialog-content>
     <mat-form-field>
       <mat-label class="text-center">Usuario</mat-label>
-      <input matInput placeholder="Usuario" [(ngModel)]="inputUser" name="inputUser" id="inputU" required /><br>
+      <input matInput placeholder="Usuario" [(ngModel)]="inputUser" name="inputUser" id="inputU" [disabled]="isBlurred" required/><br>
     </mat-form-field>
 
     <br>
@@ -13,7 +13,7 @@
 
     <mat-form-field>
       <mat-label>Contraseña</mat-label>
-      <input matInput [type]="hide? 'password':'text'" required />
+      <input matInput [type]="hide? 'password':'text'" [(ngModel)]="inputPassword" [disabled]="isBlurred" required/>
       <button mat-icon-button matSuffix (click)="hide=!hide" [attr.aria-label]="'Hide password'"
         [attr.arria-label]="hide">
         <mat-icon>{{hide? 'visibility_off': 'visibility'}}</mat-icon>
@@ -28,11 +28,8 @@
   </div>
 
   <div>
-    <p>
-      <button mat-button color="primary">¿Olvidaste tu contraseña?</button>
-    </p>
     <p mat-text-color="background">¿No tienes cuenta?
-      <button mat-button color="primary"> <mat-icon>person_add</mat-icon> </button>
+      <button mat-button color="primary" (click)="handlerRegisterClick()" > <mat-icon>person_add</mat-icon> </button>
     </p>
   </div>
 </div>
