--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="mb-5 text-center bg-secondary text-white ">
   <div>
-    <img src="../../../assets/images/Logo.png">
+    <img src="../../../assets/images/Logo2.png">
   </div>
   <app-nav ></app-nav>
 
