--- a/src/app/componentes/nav/nav.component.html
+++ b/src/app/componentes/nav/nav.component.html
@@ -4,17 +4,17 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" routerLink="home">Inicio</a>
+            <a class="nav-link text-white" routerLink="home">Inicio</a>
           </li>
         </ul>
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">
+            <a class="nav-link text-white" routerLink="login">
               <i class="bi bi-person"></i> Inicio de sesión
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">
+            <a class="nav-link text-white" routerLink="cesta">
               <i class="bi bi-basket"></i> Mi cesta
             </a>
           </li>
