--- a/src/app/componentes/admin-panel/admin-panel.component.html
+++ b/src/app/componentes/admin-panel/admin-panel.component.html
@@ -12,6 +12,7 @@
                         </a>
                     </div>
                 </div>
+
                 <div class="col-md-6">
                     <div class="p-3 border rounded">
                         <a class="nav-link active d-flex align-items-center" routerLink="usuarios">
@@ -42,31 +43,33 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <!--<div class="col-md-4">
                     <div class="p-3 border rounded">
                         <a class="nav-link active d-flex align-items-center" routerLink="productosvendidos">
                             <i class="bi bi-cart-check me-2"></i> Productos vendidos
                         </a>
                     </div>
-                </div>
+                </div>-->
+
                 <div class="col-md-4">
                     <div class="p-3 border rounded">
-                        <a class="nav-link active d-flex align-items-center" routerLink="perfiles">
+                        <a class="nav-link active d-flex align-items-center" routerLink="profile">
                             <i class="bi bi-person-lines-fill me-2"></i> Perfiles
                         </a>
                     </div>
                 </div>
+
                 <div class="col-md-4">
                     <div class="p-3 border rounded">
-                        <a class="nav-link active d-flex align-items-center" routerLink="tipodetarjetas">
+                        <a class="nav-link active d-flex align-items-center" routerLink="tipoTarjetas">
                             <i class="bi bi-credit-card-2-front me-2"></i> Tipos de medio de pago
                         </a>
                     </div>
                 </div>
 
-                <div class="col-12">
+                <div class="col-md-4">
                     <div class="p-3 border rounded">
-                        <a class="nav-link active d-flex align-items-center" routerLink="documentos">
+                        <a class="nav-link active d-flex align-items-center" routerLink="tipoDocumentos">
                             <i class="bi bi-file-earmark me-2"></i> Documentos
                         </a>
                     </div>
@@ -74,7 +77,7 @@
 
                 <div class="col-12">
                     <div class="p-3 border rounded">
-                        <a class="nav-link active d-flex align-items-center" routerLink="configuracion">
+                        <a class="nav-link active d-flex align-items-center" routerLink="conf">
                             <i class="bi bi-gear me-2"></i> Configuración
                         </a>
                     </div>
