--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -18,15 +18,23 @@
 
                 <div class="col-md-4">
 
-                    <div class="btn-group d-flex flex-column align-items-center mt-3">
+
+                     <div class="btn-group d-flex flex-column align-items-center mt-3"> 
+
+                        <a href="https://www.once.es" target="_blank" class="mb-3">
+                            <img src="https://www.once.es/logo.png" alt="Logo de  Once" class="img-fluid"
+                                style="max-width: 110px;">
+                            </a>
+                            <a href="https://www.fundaciononce.es/es" target="_blank" class="mb-3">
+                                <img src="https://portalentodigital.fundaciononce.es/sites/default/files/pictures/logo-gso2021.png"
+                                    alt="Logo de Fundación Once" class="img-fluid" style="max-width: 110px;">
+                            </a>
+                        
                         <a href="https://www.fundaciononce.es" target="_blank" class="mb-3">
                             <img src="https://www.fundaciononce.es/themes/d8_base_dev_theme-8.x-1.0/logo.svg"
                                 alt="Logo de Fundación Once" class="img-fluid" style="max-width: 110px;">
                         </a>
-                        <a href="https://www.fundaciononce.es/es" target="_blank" class="mb-3">
-                            <img src="https://portalentodigital.fundaciononce.es/sites/default/files/pictures/logo-gso2021.png"
-                                alt="Logo de Fundación Once" class="img-fluid" style="max-width: 110px;">
-                        </a>
+
                         <a href="https://portalentodigital.fundaciononce.es/" target="_blank" class="mb-3">
                             <img src="https://portalentodigital.fundaciononce.es/sites/all/themes/foncecaptacion/logo.png"
                                 alt="Logo de Por Talento Digital" class="img-fluid" style="max-width: 110px;">
@@ -60,7 +68,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+         </div> 
     </footer>
     <div class="footer-bottom">
         <p>&copy; 2023 Bankinsert. Todos los derechos reservados.</p>
