--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,9 +1,27 @@
-.btn.active {
-    background-color: chartreuse;
-    color: azure;
-    font-weight: bold;
+.nav-link{
+    color: rgb(39, 160, 76);
+    transition: .5s;
+}
+a{
+    background-color: white;
+    transition: .5s;
+}
+a:hover{
+    background-color: rgb(222, 253, 232);
+    transition: .5s;
+}
+.seleccionado {
+    box-shadow: 0px 8px 0px rgb(255, 255, 255), 0px 16px 0px rgb(39, 160, 76);;
+    color: green;
+    transform: translateY(5px);
+    transition: .5s;
+}
+.seleccionado:hover {
+    background-color: white;
+    transition: .5s;
 }
 
-.router-link-active{
-    background-color:forestgreen;
+.barraNav{
+    font-size: 1.1em;
+    font-weight: 500;
 }
