--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -13,7 +13,7 @@
     align-items: center;
     margin-left: 30px;
     user-select: none;
-    /* cursor: none; */
+    cursor: grab;
 }
 
 .logoCabecera h4 {
