--- a/src/app/hazte-cliente/hazte-cliente.component.html
+++ b/src/app/hazte-cliente/hazte-cliente.component.html
@@ -87,13 +87,13 @@
       </div>
       <div class="row justify-content-center">
         <div class="message-box">
-          <h1 class="message mat-display-1">{{mensajeEmail}}</h1>
-          <h1 class="message mat-display-1">{{mensajePhone}}</h1>
-          <h1 class="message mat-display-1">{{mensajeUser}}</h1>
-          <h1 class="message mat-display-1">{{mensajeIdentification}}</h1>
-          <h1 class="message mat-display-1">{{mensajeCampos}}</h1>
-          <h1 class="message mat-display-1">{{mensajeImage}}</h1>
-          <h1 class="message mat-display-1">{{mensajeImage2}}</h1>
+          <h1 class="message mat-display-1 text-danger">{{mensajeEmail}}</h1>
+          <h1 class="message mat-display-1 text-danger">{{mensajePhone}}</h1>
+          <h1 class="message mat-display-1 text-danger">{{mensajeUser}}</h1>
+          <h1 class="message mat-display-1 text-danger">{{mensajeIdentification}}</h1>
+          <h1 class="message mat-display-1 text-danger">{{mensajeCampos}}</h1>
+          <h1 class="message mat-display-1 text-danger">{{mensajeImage}}</h1>
+          <h1 class="message mat-display-1 text-danger">{{mensajeImage2}}</h1>
           <h1 class="message mat-display-1">{{mensaje}}</h1>
         </div>
       </div>
