--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,8 +6,8 @@
     <footer class="footer fondo-secundario">
         <div class="container mt-5">
             <div class="footer-content">
-                <div class="footer-column">
-                    <h2 class="text-white">Contacto</h2>
+                <div class="footer-column mt-5">
+                    <!-- <h2 class="text-white">Contacto</h2> -->
                     <h3 class="text-white">BANKINSERT</h3>
                     <p class="text-white">Teléfono: 911106106</p>
                     <p class="text-white">Email: info@bankinsert.com</p>
@@ -19,22 +19,22 @@
                 <div class="col-md-4">
 
 
-                     <div class="btn-group d-flex flex-column align-items-center mt-3"> 
+                    <div class="btn-group d-flex flex-column align-items-center mt-3">
 
                         <a href="https://www.once.es" target="_blank" class="mb-3">
                             <img src="https://www.once.es/logo.png" alt="Logo de  Once" class="img-fluid"
                                 style="max-width: 110px;">
-                            </a>
-                            <a href="https://www.fundaciononce.es/es" target="_blank" class="mb-3">
-                                <img src="https://portalentodigital.fundaciononce.es/sites/default/files/pictures/logo-gso2021.png"
-                                    alt="Logo de Fundación Once" class="img-fluid" style="max-width: 110px;">
-                            </a>
-                        
+                        </a>
+                        <a href="https://www.fundaciononce.es/es" target="_blank" class="mb-3">
+                            <img src="https://portalentodigital.fundaciononce.es/sites/default/files/pictures/logo-gso2021.png"
+                                alt="Logo de Fundación Once" class="img-fluid" style="max-width: 110px;">
+                        </a>
+
                         <a href="https://www.fundaciononce.es" target="_blank" class="mb-3">
                             <img src="https://www.fundaciononce.es/themes/d8_base_dev_theme-8.x-1.0/logo.svg"
                                 alt="Logo de Fundación Once" class="img-fluid" style="max-width: 110px;">
                         </a>
-
+                        <div class="btn-group d-flex flex-column align-items-center mt-3">
                         <a href="https://portalentodigital.fundaciononce.es/" target="_blank" class="mb-3">
                             <img src="https://portalentodigital.fundaciononce.es/sites/all/themes/foncecaptacion/logo.png"
                                 alt="Logo de Por Talento Digital" class="img-fluid" style="max-width: 110px;">
@@ -48,9 +48,10 @@
                                 alt="Logo de Arelance" class="img-fluid" style="max-width: 110px;">
                         </a>
                     </div>
+                    </div>
                 </div>
-                <div class="footer-column ml-auto">
-                    <h2 class="text-white">Redes sociales</h2>
+                <div class="footer-column ml-auto mt-5">
+                    <!-- <h2 class="text-white">Redes sociales</h2> -->
                     <div class="btn-group">
                         <a href="https://www.facebook.com/" target="_blank" class="btn btn-primary">
                             <i class="fab fa-facebook-f"></i>
@@ -68,7 +69,7 @@
                     </div>
                 </div>
             </div>
-         </div> 
+        </div>
     </footer>
     <div class="footer-bottom">
         <p>&copy; 2023 Bankinsert. Todos los derechos reservados.</p>
