--- a/src/app/operaciones/operaciones.component.html
+++ b/src/app/operaciones/operaciones.component.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="form-group">
-      <label for="concepto">Concepto:</label>
+      <!-- <label for="concepto">Concepto:</label> -->
       <div class="input-group">
         <div class="input-group-prepend">
           <span class="input-group-text">
@@ -40,7 +40,7 @@
       </div>
     </div>
 
-    <h1>{{mensaje}}</h1>
+    <h1 class="text-danger">{{mensaje}}</h1>
 
     <div class="btn-group">
       <button class="btn btn-success" (click)="realizarMovimiento('Ingreso')">Ingresar</button>
@@ -51,6 +51,6 @@
     <p class="text-center">Último movimiento: {{ ultimoMovimiento?.tipo }} - {{ ultimoMovimiento?.concepto }} - {{
       ultimoMovimiento?.fecha |
       date: 'dd/MM/yyyy' }}</p>
-    <p class="text-center">Saldo actual: {{ saldo }}</p>
+     <!-- <p class="text-center">Saldo actual: {{ saldo }}</p>  -->
   </div>
 </div>
