--- a/src/app/componentes/nav/nav.component.html
+++ b/src/app/componentes/nav/nav.component.html
@@ -15,7 +15,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link text-white" routerLink="signup">
-              <i class="bi bi-person"></i> Registrarse
+                <i class="bi bi-person-plus"></i> Registrarse
             </a>
           </li>
           <li class="nav-item">
