--- a/src/app/componentes/sold-product/sold-product.component.html
+++ b/src/app/componentes/sold-product/sold-product.component.html
@@ -4,11 +4,11 @@
     <table class="table table-stripped table-bordered">
         <tr>
             <th class="text-center">PRODUCTO</th>
-            <th class="text-center">PRECIO/UNIDAD</th>
+            <th class="text-center">COSTO UNITARIO</th>
             <th class="text-center">CANTIDAD</th>
-            <th class="text-center">PRECIO POR CANTIDAD</th>
+            <th class="text-center">PRECIO DE VENTA</th>
             <th class="text-center">ESTADO</th>
-            <th class="text-center">FECHA</th>
+            <th class="text-center">FECHA DE PAGO</th>
             <th class="text-center">ACCIONES</th>
         </tr>
         <tr *ngFor="let soldProductBean of cestas; let i=index">
