--- a/src/app/componentes/rol/rol.component.html
+++ b/src/app/componentes/rol/rol.component.html
@@ -22,7 +22,7 @@
         </tr>
     </table>
     <div class="text-center">
-        <button type="button" class="btn btn-primary justify-content-center" data-bs-toggle="modal" data-bs-target="#myModal" [disabled]="contador>0">ALTA</button>
+        <button type="button" class="btn btn-primary justify-content-center" data-bs-toggle="modal" data-bs-target="#myModal" [disabled]="contador<0">ALTA</button>
     </div>
     <app-modal-rol (eventoAComunicar)="realizarComunicacion($event)" id="{{id}}"></app-modal-rol>
 </div>
