--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <div class="contenedorModal mx-auto mt-5">
         <div class="align-items-center">
             <div class="align-items-center d-flex justify-content-center">
-                <img src="assets/guardian.png" class="w-50">
+                <img src="assets/loadingBraille.gif" class="w-50">
             </div>            
             <div class="p-2 mx-1 align-items-center d-flex justify-content-center texto-secundario">
                 <p>Estableciendo conexión segura</p></div>
